[zest.releaser]
python-file-with-version = eazysvn.py
create-wheel = yes

[bdist_wheel]
universal = 1

[metadata]
license_file = COPYING

[flake8]
doctests = yes
max-line-length = 125
extend-ignore = E127
# https://pep8.readthedocs.org/en/latest/intro.html#error-codes
# E127: continuation line over-indented for visual indent
